Release notes
==========================================================

(2013-03-29)

- Now TghSQLTable class inherits from TghSQLHandler.
- New TghSQLBaseHandler class inherits from TghSQLHandler class.
- Renamed gh_global unit name to gh_classes.
- Version 0.1.4


(2013-03-25)

- Now TghSQLLib inherits from TghSQLHandler.
- Implemented PacketRecords property in TghSQLHandler.
- Now is possible to use t.Script.Text to get a DataSet using your own SQL.
- Using a real version.
- Many more improvements.
- Version 0.1.4


(2013-03-17)

- The Greyhound package was moved to /packages directory.
- Created a new greyhound_zeos package.
- You can make M-N relationship using a sub query in Where method.
- Many more improvements.
- Version 0.1.3


(2013-02-24)

- The gh_pack file was renamed to greyhound (the gh_pack will continue existing some time).
- Tests were created using FPCUnit framework.
- Version 0.1.2


(2013-01-05)

- New TghIBLib/TghFirebirdLib class for IB/Firebird support;
- Implemented sequence/generator support;
- New events for Table;
- Many more improvements.


(2012-12-10)

- New IghDataSet and IghDataSetResolver interfaces;
- ZEOS works better now;
- New support for JSON using Adapter pattern;
- Released 0.1.1 version;
- Many more bug fixes and improvements.


(2012-11-21)

- The runtime package was created;
- Renamed all DB classes to SQL classes;
- Some methods was cut (t.LoadFromFile/SaveToFile, etc);
- The co.Broker property was renamed to co.Lib;
- Created gh_data unit;
- Now gh_sql uses gh_data;
- Get AutoInc values automatically (sqlite and mssql);
- Many more bug fixes and improvements.


(2012-08-20)

- Renamed t.DataSetToQuery method name to t.Transform;
- Better method names to TghDBConstraintList;
- New TghDBQuery class to use instead TSQLQuery;


(2012-08-12)[2]

- Now TghDBConnectorBroker inherits from TghDBObject.